@@ -1,16 +1,6 @@
 # Plugin messages
-plugin-description: Multiworld management made easy.
-plugin-enabled: {0} has been enabled.
-plugin-disabled: {0} disabled.
-
-world-creation-in-progress: &YELLOWCreating {0} (this may take a while)
-world-created: &GREENThe world &YELLOW{0} &GREEN has been created.
-must-specify-a-world-name: You must specify a world name!
-create-name-hint: Can be any name as long as it is unique.
-invalid-environment: The environment specified does not exist!
-valid-environments: Valid types are: {0}.
-
-worlds-configured: {0} worlds configured
+dimensiondoor.description: Multiworld management made easy.
+dimensiondoor.must-specify-a-world-name: &REDYou must specify a world name!
 
 # Creation commands
 ## Create command
@@ -133,10 +123,10 @@ modifycommand.description: Modify world settings.
 modifycommand.permission-description: Allow users to modify world settings.
 modifycommand.permission-per-attribute-description: Allow users to modify {0} attribute on worlds
 modifycommand.usage: <name> <attribute> <value>
-modifycommand.must-specify-valid-attribute: You must specify a valid attribute!
-modifycommand.must-specify-valid-value: You must speficy a value!
+modifycommand.must-specify-valid-attribute: &REDYou must specify a valid attribute!
+modifycommand.must-specify-valid-value: You must specify a value!
 modifycommand.value-hint: This depends on the attribute you want to change.
-modifycommand.attribute-list: Valid attributes include: {0}
+modifycommand.attribute-list: &YELLOWValid attributes include: {0}
 modifycommand.must-specify-valid-difficulty: You must specify a valid difficulty.
 modifycommand.choose-between: Choose between: {0}
 modifycommand.must-specify-valid-game-mode: You must specify a valid game mode.
