@@ -1,5 +1,7 @@
 Changelog for DimensionDoor (v2.1.1-SNAPSHOT)
 
+2012-08-07 02:55:01 +0100    remember to call super loadConfiguration (James Richardson)
+2012-08-07 02:52:29 +0100    register world root permission (James Richardson)
 2012-08-07 02:49:12 +0100    remove unused imports (James Richardson)
 2012-08-07 02:48:42 +0100    only set gamemode when teleporting between worlds (James Richardson)
 2012-08-07 02:47:34 +0100    support large biomes (James Richardson)
